tests/snapshots/run_wpt_conformance__litert_softsign_negative_float16_0D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
softsign.https.any.js softsign negative float16 0D tensor, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Softsign { input: 0, options: Some(MLOperatorOptions { label: "" }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    softsignInput: f16[];
  }

  nodes {
    [softsignOutput] = softsign(softsignInput, label="");
  }

  outputs { softsignOutput; }
}
