tests/snapshots/run_wpt_conformance__litert_softsign_negative_float32_1D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softsign.https.any.js",
    "softsign negative float32 1D tensor",
    "litert",
    "PASS",
)
