tests/snapshots/run_wpt_conformance__litert_softsign_positive_float32_0D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "softsign.https.any.js",
    "softsign positive float32 0D tensor",
    "litert",
    "PASS",
)
